# Celery-Configuration

./: .env  .gitignore  README.md  celery.zsh  pyproject.toml  run.zsh  server.zsh  supervisord.conf
config/: celery.py  settings.py
