[tool.poetry]
name = "celery configuration"
version = "0.1.0"
description = "a simple celery configuration for django"
authors = ["ahMAD ASSadi <ds1380ahmad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
celery = "^5.4.0"
django-redis = "^5.4.0"
django-environ = "^0.11.2"
flower = "^2.0.1"
supervisor = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
